# advent-of-code

./: .gitignore  .gitmodules  readme.md
2025/src/: CMakeLists.txt
2025/src/main/: BatteryBanks.cpp  BatteryBanks.hpp  CombinationLock.cpp  CombinationLock.hpp  ListOfIngredients.cpp  ListOfIngredients.hpp  PaperGrid.cpp  PaperGrid.hpp  ProductIdRanges.cpp  ProductIdRanges.hpp  main.cpp
2025/src/test/: BatteryBanksTest.cpp  CombinationLockTest.cpp  ListOfIngredientsTest.cpp  PaperGridTest.cpp  ProductIdRangeTest.cpp
